Bug #2708 - CSS tweaks on group site admin bars
- one of the styling changes affected the site name truncation

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -435,6 +435,7 @@
 			}
 			#wp-admin-bar-site-name {
 				border-left: none;
+				max-width: 320px;
 				.ab-sub-wrapper {
 					width: calc(~'100% + 2px');
 					@media (min-width: @screen-sm-min) {
